test/invalid/line_directive_nonint.d
//T error: line_directive_nonint.d:4:6:
//T error: Expected a line number, not `buzz`.

#line buzz
